# photoscan-import-cli

./: .gitignore  CLEANUP_PLAN.md  README.md  bench_corner_refine.py  download_oxford.py  download_textures.py  extract.py  pyproject.toml  requirements.txt  setup.sh  test_blur_comparison.py  test_full_scene.py
data_generator/: DEBUG_PLAN.md  DEBUG_PLAN_V2.md  IMPROVEMENT_PLAN.md  PLAN.md  SYSTEM_DOCUMENTATION.md  SYSTEM_DOCUMENTATION_2026-04-17.md  TEST.md  VERIFICATION_PLAN.md  VERIFICATION_REPORT.md  check_colors.py  debug_composite.py  debug_corner_e2e.py  debug_corners.py  debug_full_pipeline.py  debug_marker_rotation.py  debug_matrix.py  debug_pipeline.py  debug_polygon_formula.py  debug_rotation.py  debug_rotation_matrix.py  debug_transform.py  debug_visualize.py  generate.py  generate_batch.py  generate_common.py  generate_corner_regression.py  generate_dataset.py  generate_dataset.py.bak  generate_detection.py  generate_fiducial.py  generate_fiducial_pose.py  generate_pose.py  generate_pose_multi.py  generate_samples.py  generate_samples_v2.py  generate_samples_v3.py  generate_samples_v4.py  generate_samples_v5.py  generate_samples_v6.py  generate_simple.py  (+56 more)
docs/: ARCHITECTURE.md  FIDUCIAL_BINARY.md  FIDUCIAL_PLAN.md  FIDUCIAL_POSE_NEXT_RUN.md  FIDUCIAL_POSE_TRAINING_STRATEGY.md  FUTURE_IMPROVEMENTS.md  GETTING_STARTED.md  KOTLIN_USAGE.md  PHOTOCROP_USAGE.md  PROJECT_PLAN.md  REFACTORING_PLAN.md  V4_TRAINING_PLAN.md
export/: export_onnx.py
onnx_inference/: __main__.py  infer.py  infer.py.backup  photocrop.py
real_world_examples/: real_world_example_01.json  (+4 more)
(+49 files in other folders)
