[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "photoscan-import-cli"
version = "0.1.0"
description = "Detect and extract individual photographs from multi-photo scans"
requires-python = ">=3.9"
dependencies = [
    "opencv-python>=4.9,<5",
    "numpy>=1.26,<2",
    "Pillow>=12,<13",
    "onnx>=1.21,<2",
    "onnxruntime>=1.23,<2",
]

[project.scripts]
photocrop = "com.kryspetrie.photoscan_import_cli.photocrop:main"

[tool.setuptools.packages.find]
include = ["com*"]